0.8.0: Tested deployment on remote machine. Seems to be working. (15-08-2022)